# thoth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  changelog-ci-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog-ci.yml  cut-tag.yml  pr-title-check.yml  release.yml  rust-ci.yml  update-changelog.yml
scripts/completions/: thoth.nu
src/: cli.rs  clipboard.rs  formatter.rs  lib.rs  main.rs  markdown_renderer.rs  scrollable_textarea.rs  title_popup.rs  title_select_popup.rs  ui.rs  ui_handler.rs  utils.rs
tests/: integration_tests.rs
