[package]
name = "thoth"
version = "0.1.0"
edition = "2021"
authors = ["Joel Afriyie joel.o.afriyie@gmail.com, oren.beani@gmail.com"]
description = "A terminal scratchpad akin to Heynote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
syntect = "5.1"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["bracketed-paste"] }
ratatui = "0.27.0"
tui-textarea = "0.5.1"
copypasta = "0.10.1"
anyhow = "1.0.86"
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
once_cell = "1.8.0"
[dev-dependencies]
mockall = "0.11"
