[package]
name = "thoth"
version = "0.1.13"
edition = "2021"
authors = ["Joel Afriyie joel.o.afriyie@gmail.com, oren.beani@gmail.com"]
description = "A terminal scratchpad akin to Heynote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
syntect = "5.1"
pulldown-cmark = { version = "0.11.0"}
pulldown-cmark-to-cmark = "15.0.1"
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["bracketed-paste"] }
tui-textarea = "0.5.1"
copypasta = "0.10.1"
anyhow = "1.0.86"
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
once_cell = "1.8.0"
atty = "0.2.14"
tempfile = "3.2"
syntect-tui = "3.0.2"

[dev-dependencies]
mockall = "0.11"
